--- a/app/styles/variables/_typography.scss
+++ b/app/styles/variables/_typography.scss
@@ -6,3 +6,4 @@ $et-default-font-size: 6vh !default;
 $et-tiny-font-size: $et-default-font-size * 0.7 !default;
 $et-small-font-size: $et-default-font-size * 0.85 !default;
 $et-large-font-size: $et-default-font-size * 1.15 !default;
+$et-huge-font-size: $et-default-font-size * 1.3 !default;
