--- a/addon/components/ember-theater/director/text/template.hbs
+++ b/addon/components/ember-theater/director/text/template.hbs
@@ -5,6 +5,7 @@
   instantWriteText=instantWriteText
   keys=keys
   text=text
+  textEffect=textEffect
   textSpeed=textSpeed
   resolve=(action 'completeText')
 }}
