add transparent style

--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -7,3 +7,4 @@
 @import "mixins/styles/coastal";
 @import "mixins/styles/ember";
 @import "mixins/styles/paper";
+@import "mixins/styles/transparent";
