--- a/app/styles/variables/_ember-theater.scss
+++ b/app/styles/variables/_ember-theater.scss
@@ -15,6 +15,7 @@ $et-default-transition-speed: 500ms;
 @import "mixins/styles/coastal";
 @import "mixins/styles/ember";
 @import "mixins/styles/paper";
+@import "mixins/styles/transparent";
 
 @import "components/curtain";
 @import "components/choice";
