--- a/app/styles/variables/components/_choice.scss
+++ b/app/styles/variables/components/_choice.scss
@@ -77,3 +77,13 @@ $et-choice-header-paper-color: $et-paper-secondary-color !default;
 
 $et-choice-option-paper-font-weight: $et-choice-option-font-weight !default;
 $et-choice-option-paper-font-family: $et-choice-option-font-family !default;
+
+// transparent
+$et-choice-transparent-background-color: $et-transparent-primary-color !default;
+$et-choice-transparent-opacity: $et-choice-opacity !default;
+
+$et-choice-header-transparent-font-family: $et-choice-header-font-family !default;
+$et-choice-header-transparent-color: $et-transparent-neutral-color !default;
+
+$et-choice-option-transparent-font-weight: $et-choice-option-font-weight !default;
+$et-choice-option-transparent-font-family: $et-choice-option-font-family !default;
