--- a/app/styles/variables/components/_text.scss
+++ b/app/styles/variables/components/_text.scss
@@ -67,3 +67,7 @@ $et-text-caption-ember-font-family: $et-text-caption-font-family !default;
 $et-text-paper-opacity: $et-text-opacity !default;
 $et-text-paper-font-family: $et-text-font-family !default;
 $et-text-caption-paper-font-family: $et-text-caption-font-family !default;
+
+$et-text-transparent-opacity: $et-text-opacity !default;
+$et-text-transparent-font-family: $et-text-font-family !default;
+$et-text-caption-transparent-font-family: $et-text-caption-font-family !default;
