add scrollable option to text

--- a/app/styles/components/ember-theater/director/_text.scss
+++ b/app/styles/components/ember-theater/director/_text.scss
@@ -32,6 +32,12 @@
     }
   }
 
+  &.et-scrollable {
+    .et-text-body {
+      padding-bottom: 0;
+    }
+  }
+
   &.et-block {
     left: $et-text-block-left;
     right: $et-text-block-right;
