--- a/addon/components/ember-theater/director/directable/text/template.hbs
+++ b/addon/components/ember-theater/director/directable/text/template.hbs
@@ -6,7 +6,7 @@
   keyboardPriority=keyboardPriority
   keys=keys
   text=text
-  textEffect=textEffect
+  textStyle=textStyle
   textSpeed=textSpeed
   resolve=(action 'completeText')
 }}
