--- a/app/styles/variables/components/_choice.scss
+++ b/app/styles/variables/components/_choice.scss
@@ -9,6 +9,11 @@ $et-choice-header-margin: 0 3vw !default;
 $et-choice-header-margin-bottom: $et-choice-rhythm * 10 !default;
 $et-choice-header-font-family: $et-primary-serif !default;
 
+$et-choice-option-pair-major-float: left !default;
+$et-choice-option-pair-major-width: 90% !default;
+$et-choice-option-pair-minor-float: right !default;
+$et-choice-option-pair-minor-width: 9% !default;
+
 $et-choice-option-margin-bottom: $et-choice-rhythm * 2 !default;
 $et-choice-option-font-size: $et-small-font-size !default;
 $et-choice-option-width: 100% !default;
