change text style to animation

--- a/addon/components/ember-theater/director/directable/text/template.hbs
+++ b/addon/components/ember-theater/director/directable/text/template.hbs
@@ -6,7 +6,7 @@
   keyboardPriority=keyboardPriority
   keys=keys
   text=text
-  textStyle=textStyle
+  textAnimation=textAnimation
   textSpeed=textSpeed
   resolve=(action 'completeText')
 }}
