--- a/app/styles/variables/base/_typography.scss
+++ b/app/styles/variables/base/_typography.scss
@@ -2,6 +2,8 @@ $et-primary-serif: "Andada" !default;
 $et-primary-sans-serif: "Comfortaa" !default;
 $et-primary-font-family: $et-primary-serif !default;
 
+$et-default-line-height: 8vh !default;
+
 $et-default-font-size: 6vh !default;
 $et-tiny-font-size: $et-default-font-size * 0.7 !default;
 $et-small-font-size: $et-default-font-size * 0.85 !default;
