--- a/app/styles/variables/schemes/decorative/_coastal.scss
+++ b/app/styles/variables/schemes/decorative/_coastal.scss
@@ -18,3 +18,17 @@ $et-input-coastal-border-color: $et-coastal-secondary-color !default;
 $et-input-coastal-border-style: $et-button-coastal-border-style !default;
 
 $et-input-coastal-focus-border-color: $et-coastal-highlight-color !default;
+
+// choice
+$et-choice-coastal-background-color: $et-coastal-secondary-color !default;
+$et-choice-coastal-opacity: $et-choice-opacity !default;
+
+$et-choice-header-coastal-font-family: $et-choice-header-font-family !default;
+
+$et-choice-option-coastal-font-weight: $et-choice-option-font-weight !default;
+$et-choice-option-coastal-font-family: $et-choice-option-font-family !default;
+
+// text
+$et-text-coastal-opacity: $et-text-opacity !default;
+$et-text-coastal-font-family: $et-text-font-family !default;
+$et-text-caption-coastal-font-family: $et-text-caption-font-family !default;
