--- a/app/styles/variables/schemes/decorative/_transparent.scss
+++ b/app/styles/variables/schemes/decorative/_transparent.scss
@@ -19,3 +19,18 @@ $et-input-transparent-border-color: $et-transparent-secondary-color !default;
 $et-input-transparent-border-style: $et-button-transparent-border-style !default;
 
 $et-input-transparent-focus-border-color: $et-transparent-highlight-color !default;
+
+// choice
+$et-choice-transparent-background-color: $et-transparent-primary-color !default;
+$et-choice-transparent-opacity: $et-choice-opacity !default;
+
+$et-choice-header-transparent-font-family: $et-choice-header-font-family !default;
+$et-choice-header-transparent-color: $et-transparent-neutral-color !default;
+
+$et-choice-option-transparent-font-weight: $et-choice-option-font-weight !default;
+$et-choice-option-transparent-font-family: $et-choice-option-font-family !default;
+
+// transparent
+$et-text-transparent-opacity: $et-text-opacity !default;
+$et-text-transparent-font-family: $et-text-font-family !default;
+$et-text-caption-transparent-font-family: $et-text-caption-font-family !default;
