--- a/app/styles/variables/schemes/decorative/_ember.scss
+++ b/app/styles/variables/schemes/decorative/_ember.scss
@@ -19,3 +19,17 @@ $et-input-ember-border-color: $et-ember-secondary-color !default;
 $et-input-ember-border-style: $et-button-ember-border-style !default;
 
 $et-input-ember-focus-border-color: $et-ember-highlight-color !default;
+
+// choice
+$et-choice-ember-background-color: $et-ember-secondary-color !default;
+$et-choice-ember-opacity: $et-choice-opacity !default;
+
+$et-choice-header-ember-font-family: $et-choice-header-font-family !default;
+
+$et-choice-option-ember-font-weight: $et-choice-option-font-weight !default;
+$et-choice-option-ember-font-family: $et-choice-option-font-family !default;
+
+// ember
+$et-text-ember-opacity: $et-text-opacity !default;
+$et-text-ember-font-family: $et-text-font-family !default;
+$et-text-caption-ember-font-family: $et-text-caption-font-family !default;
