--- a/app/styles/variables/schemes/decorative/_paper.scss
+++ b/app/styles/variables/schemes/decorative/_paper.scss
@@ -21,3 +21,18 @@ $et-input-paper-border-color: $et-paper-secondary-color !default;
 $et-input-paper-border-style: $et-button-paper-border-style !default;
 
 $et-input-paper-focus-border-color: $et-paper-secondary-color !default;
+
+// choice
+$et-choice-paper-background-color: $et-paper-primary-color !default;
+$et-choice-paper-opacity: $et-choice-opacity !default;
+
+$et-choice-header-paper-font-family: $et-choice-header-font-family !default;
+$et-choice-header-paper-color: $et-paper-secondary-color !default;
+
+$et-choice-option-paper-font-weight: $et-choice-option-font-weight !default;
+$et-choice-option-paper-font-family: $et-choice-option-font-family !default;
+
+// text
+$et-text-paper-opacity: $et-text-opacity !default;
+$et-text-paper-font-family: $et-text-font-family !default;
+$et-text-caption-paper-font-family: $et-text-caption-font-family !default;
