--- a/addon/components/ember-theater/menu-bar/reset/template.hbs
+++ b/addon/components/ember-theater/menu-bar/reset/template.hbs
@@ -1,6 +1,9 @@
 {{fa-icon 'refresh' spin=hovering}}
 {{#if isOpen}}
   {{#modal-dialog}}
-    {{ember-theater/menu-bar/reset/menu closeMenu=(action 'closeMenu')}}
+    {{ember-theater/menu-bar/reset/menu
+      theaterId=theaterId
+      closeMenu=(action 'closeMenu')
+    }}
   {{/modal-dialog}}
 {{/if}}
