--- a/addon/components/ember-theater/menu-bar/template.hbs
+++ b/addon/components/ember-theater/menu-bar/template.hbs
@@ -1,5 +1,5 @@
 <div class='et-menu-bar {{configurableClassNames}}'>
   {{#each components as |componentName|}}
-    {{component componentName}}
+    {{component componentName theaterId=theaterId}}
   {{/each}}
 </div>
