fix multiton instantiation

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,1 +1,6 @@
-{{ember-theater config=config}}
+<div class="theater-container">
+  {{ember-theater config=config}}
+</div>
+<div class="theater-container">
+  {{ember-theater config=config2}}
+</div>
