--- a/app/styles/components/ember-theater/_menu-bar.scss
+++ b/app/styles/components/ember-theater/_menu-bar.scss
@@ -12,6 +12,9 @@ $et-menu-bar-included: true;
 
 .et-menu-bar-container {
   height: $et-menu-bar-height / 15;
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
 
   &:hover {
     height: $et-menu-bar-height;
