--- a/app/styles/variables/base/_borders.scss
+++ b/app/styles/variables/base/_borders.scss
@@ -1,3 +1,3 @@
 $et-default-border-style: solid !default;
-$et-default-border-radius: 0.5vw !default;
-$et-default-border-width: 0.5vh !default;
+$et-default-border-radius: 7px !default;
+$et-default-border-width: 3px !default;
