--- a/app/styles/variables/base/_typography.scss
+++ b/app/styles/variables/base/_typography.scss
@@ -2,10 +2,10 @@ $et-primary-serif: "Andada" !default;
 $et-primary-sans-serif: "Comfortaa" !default;
 $et-primary-font-family: $et-primary-serif !default;
 
-$et-default-line-height: 8vh !default;
+$et-default-line-height: 48px !default;
 
-$et-default-font-size: 6vh !default;
-$et-tiny-font-size: $et-default-font-size * 0.7 !default;
-$et-small-font-size: $et-default-font-size * 0.85 !default;
-$et-large-font-size: $et-default-font-size * 1.15 !default;
-$et-huge-font-size: $et-default-font-size * 1.3 !default;
+$et-default-font-size: 32px !default;
+$et-tiny-font-size: $et-default-font-size * 0.6 !default;
+$et-small-font-size: $et-default-font-size * 0.8 !default;
+$et-large-font-size: $et-default-font-size * 1.2 !default;
+$et-huge-font-size: $et-default-font-size * 1.4 !default;
