--- a/app/styles/variables/components/_text.scss
+++ b/app/styles/variables/components/_text.scss
@@ -1,4 +1,4 @@
-$et-text-padding-base: 2.17vh;
+$et-text-padding-base: $et-default-line-height * 0.62;
 
 $et-text-border-width: $et-default-border-width !default;
 $et-text-opacity: $et-semi-transparency !default;
