--- a/app/styles/variables/schemes/structural/_full.scss
+++ b/app/styles/variables/schemes/structural/_full.scss
@@ -1,4 +1,4 @@
-$et-full-padding: 19vw;
+$et-full-padding: 19%;
 
 // choice
 $et-choice-full-padding: $et-choice-padding $et-full-padding !default;
