--- a/addon/components/ember-theater/menu-bar/template.hbs
+++ b/addon/components/ember-theater/menu-bar/template.hbs
@@ -1,5 +1,17 @@
-<div class='et-menu-bar {{configurableClassNames}}'>
-  {{#each components as |componentName|}}
-    {{component componentName theaterId=theaterId}}
-  {{/each}}
+<div class="et-menu-bar-container {{decorativeClassNames}}">
+  <div class="et-menu-bar {{configurableClassNames}}">
+    {{#each components as |componentName|}}
+      {{component componentName
+        theaterId=theaterId
+        openMenu=(action "openMenu" componentName)
+      }}
+    {{/each}}
+  </div>
 </div>
+
+{{#if currentMenu}}
+  {{component currentMenu
+    theaterId=theaterId
+    closeMenu=(action "closeMenu")
+  }}
+{{/if}}
