--- a/app/styles/components/ember-theater/director/_text.scss
+++ b/app/styles/components/ember-theater/director/_text.scss
@@ -30,7 +30,7 @@ $et-text-included: true;
     height: 100%;
 
     .et-text-body {
-      padding-bottom: 100vh;
+      padding-bottom: 100%;
     }
   }
 
