--- a/app/styles/variables/components/_curtain.scss
+++ b/app/styles/variables/components/_curtain.scss
@@ -1,9 +1,9 @@
 $et-curtain-color: #EEE !default;
-$et-curtain-padding-top: 7vh !default;
-$et-curtain-padding-sides: 31vw !default;
+$et-curtain-padding-top: 30px !default;
+$et-curtain-padding-sides: 31% !default;
 
 $et-curtain-game-title-font-size: $et-huge-font-size !default;
-$et-curtain-game-title-margin-bottom: 8vh !default;
+$et-curtain-game-title-margin-bottom: 60px !default;
 
-$et-curtain-progress-bar-dimensions: 16vw !default;
-$et-curtain-progress-bar-font-size: $et-default-font-size !default;
+$et-curtain-progress-bar-dimensions: 300px !default;
+$et-curtain-progress-bar-font-size: $et-large-font-size !default;
