ensure only one keyboard focus

--- a/addon/components/ember-theater/director/directable/choice/template.hbs
+++ b/addon/components/ember-theater/director/directable/choice/template.hbs
@@ -5,6 +5,7 @@
   {{ember-theater/director/directable/choice/option
     activeIndex=activeIndex
     index=index
+    keyboardActivated=keyboardActivated
     keyboardPriority=keyboardPriority
     choice=choice
     moveUpKeys=moveUpKeys
