--- a/addon/components/ember-theater/director/directable/text/template.hbs
+++ b/addon/components/ember-theater/director/directable/text/template.hbs
@@ -3,6 +3,7 @@
 {{/if}}
 {{ember-theater/director/directable/text/body
   instantWriteText=instantWriteText
+  keyboardActivated=keyboardActivated
   keyboardPriority=keyboardPriority
   keys=keys
   text=text
