--- a/addon/components/ember-theater/director/layer/template.hbs
+++ b/addon/components/ember-theater/director/layer/template.hbs
@@ -1,6 +1,7 @@
 {{#each layerDirectables as |directable|}}
   {{component directable.componentType
     directable=directable
+    keyboardActivated=keyboardActivated
     theaterId=theaterId
   }}
 {{/each}}
@@ -8,6 +9,7 @@
 {{#each-in childLayers as |name directables|}}
   {{ember-theater/director/layer
     directables=directables
+    keyboardActivated=keyboardActivated
     name=name
     theaterId=theaterId
   }}
