--- a/addon/components/ember-theater/director/template.hbs
+++ b/addon/components/ember-theater/director/template.hbs
@@ -1,5 +1,6 @@
 {{ember-theater/director/layer
   directables=directables
   name=''
+  keyboardActivated=keyboardActivated
   theaterId=theaterId
 }}
