--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div class="theater-container">
-  {{ember-theater config=config}}
+  {{ember-theater config=config isFocused=true}}
 </div>
 <div class="theater-container">
   {{ember-theater config=config2}}
