--- a/addon/components/ember-theater/menu-bar/menu/template.hbs
+++ b/addon/components/ember-theater/menu-bar/menu/template.hbs
@@ -2,6 +2,7 @@
   {{ember-theater/director/directable/choice
     activeIndex=1
     directable=directable
+    keyboardActivated=keyboardActivated
     theaterId=theaterId
   }}
 {{/if}}
