--- a/addon/components/ember-theater/menu-bar/menu/template.hbs
+++ b/addon/components/ember-theater/menu-bar/menu/template.hbs
@@ -1,8 +1,8 @@
 {{#if directable}}
   {{ember-theater/director/directable/choice
-    activeIndex=1
     directable=directable
     keyboardActivated=keyboardActivated
+    keyboardFirstResponder=true
     theaterId=theaterId
   }}
 {{/if}}
