pass in fixtures

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <div class="theater-container">
-  {{ember-theater config=config isFocused=true}}
+  {{ember-theater config=config fixtures=fixtures isFocused=true}}
 </div>
 <div class="theater-container">
-  {{ember-theater config=config2}}
+  {{ember-theater config=config2 fixtures=fixtures}}
 </div>
