--- a/addon/components/ember-theater/template.hbs
+++ b/addon/components/ember-theater/template.hbs
@@ -7,6 +7,7 @@
   {{/each}}
 {{else}}
   {{component mediaLoader
+    fixtures=fixtures
     isFocused=isFocused
     theaterId=theaterId
     complete=(action 'startGame')
