pass theaterId in as param

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -2,5 +2,5 @@
   {{ember-theater config=config fixtures=fixtures isFocused=true}}
 </div>
 <div class="theater-container">
-  {{ember-theater config=config2 fixtures=fixtures}}
+  {{ember-theater config=config fixtures=fixtures theaterId="theater2"}}
 </div>
