make config optional

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -15,7 +15,7 @@
   {{/ember-theater}}
 </div>
 <div class="theater-container">
-  {{#ember-theater config=config fixtures=fixtures theaterId="theater2" as |theater|}}
+  {{#ember-theater fixtures=fixtures theaterId="theater2" as |theater|}}
     {{theater.director initialSceneId=2}}
   {{/ember-theater}}
 </div>
